第一次更新。扩展了词法分析器的分析内容，去掉keyword类型，为每一个关键字添加一种类型。增加了对浮点数的识别。
完成了一部分语法分析。基于递归下降的手写paser。

--- a/LuaVM/LuaVM.csproj
+++ b/LuaVM/LuaVM.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{69B93AC0-73C6-4C67-8FCE-D7A0C8837EEB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp7</RootNamespace>
-    <AssemblyName>ConsoleApp7</AssemblyName>
+    <RootNamespace>LuaVM</RootNamespace>
+    <AssemblyName>LuaVM</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Memory\MemoryBlock.cs" />
+    <Compile Include="Memory\MemoryDistributor.cs" />
     <Compile Include="Paser\Lexer\ILexerState.cs" />
     <Compile Include="Paser\Lexer\Lexer.cs" />
     <Compile Include="Paser\Lexer\TrieTree.cs" />
@@ -55,8 +58,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Memory\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
