实现了闭包的功能，并且使得Lua可以调用C#的函数。

--- a/LuaVM/LuaVM.csproj
+++ b/LuaVM/LuaVM.csproj
@@ -67,6 +67,7 @@
     <Compile Include="VM\Table\LuaTable.cs" />
     <Compile Include="VM\LuaValue.cs" />
     <Compile Include="VM\LuaVM.cs" />
+    <Compile Include="VM\UpValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
