--- a/LuaVM/LuaVM.csproj
+++ b/LuaVM/LuaVM.csproj
@@ -67,6 +67,7 @@
     <Compile Include="VM\Table\LuaTable.cs" />
     <Compile Include="VM\LuaValue.cs" />
     <Compile Include="VM\LuaVM.cs" />
+    <Compile Include="VM\Table\Metatable.cs" />
     <Compile Include="VM\UpValue.cs" />
   </ItemGroup>
   <ItemGroup>
